--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+.data {
+  background-color: red;
+  height: 100vh;
+  padding: 100px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.titles {
+  background-color: green;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.data-p {
+  background-color: transparent;
+  border-bottom: 1px solid rgb(63, 63, 63);
+  padding: 10px;
+  margin-bottom: 0px;
+}
+
+p,
+.btn__p {
   color: white;
+  width: 25%;
+  text-align: center;
+  padding: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn__p{
+  display: flex;
+  justify-content: space-between;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  min-height: 298px;
+}
+
+form {
+  width: 30%;
+  background-color: rebeccapurple;
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+}
+input {
+  width: 100%;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  font-size: 18px;
+  padding-inline: 8px;
+  color: white;
 }
