--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 * {
   margin: 0;
   box-sizing: border-box;
+  font-family: "Barlow", sans-serif;
+  transition: all 0.4s ease-in-out;
 }
