--- a/src/Components/login.css
+++ b/src/Components/login.css
@@ -8,12 +8,21 @@
   align-items: center;
 }
 
+.error_msg{
+  color: red;
+  width: 100%;
+  font-size: 12px;
+  padding: 0px;
+  line-height: 10px;
+  text-align: justify;
+}
+
 .form {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 25%;
-  gap: 20px;
+  border: 1px solid white;
 }
 
 .input {
@@ -23,6 +32,7 @@
   background-color: white;
   font-weight: bold;
   border-radius: 10px;
+  margin-block: 10px;
 }
 
 .input:focus {
@@ -45,6 +55,7 @@
   letter-spacing: 1px;
   text-align: center;
   transition: all 0.4s ease-in-out;
+  margin-block: 20px;
 }
 
 .login_btn:hover {
